2011-06-11  Keith Marshall  <keithmarshall@users.sourceforge.net>

	Fix MinGW-Bug #3313806.

	* src/pkginfo/pkginfo.l (CMS_KEYWORDS): Do not match them within the
	PACKAGE_NAME field; this avoids misinterpretation as a release status
	qualifier when intended as part of the package name, as in msys-cvs.

2011-06-07  Keith Marshall  <keithmarshall@users.sourceforge.net>

	Provisional correction for MinGW-Bug #3309438.

	* src/debug.h [DEBUGLEVEL == 0]: Provide defaults for...
	(DEBUG_ENABLED, DEBUG_REQUEST): ...these macros.

	* src/tarproc.cpp (pkgTarArchiveInstaller::ProcessDirectory):
	(pkgTarArchiveInstaller::ProcessDataStream): Use DEBUG_REQUEST to
	enable runtime trace activation for previous compile time choices.

2011-05-30  Keith Marshall  <keithmarshall@users.sourceforge.net>

	mingw-get-0.3-mingw32-alpha-1 released.

	* configure.ac (AC_INIT): Adjust version number.
	* srcdist-doc/NEWS.in: Updated; document new features.
	* All files (r0-3-alpha-1): Tag assigned.

2011-05-30  Keith Marshall  <keithmarshall@users.sourceforge.net>

	Support assignment of DEBUGLEVEL at configure time.

	* configure.ac (DEBUGLEVEL): Declare as a precious variable, using
	AC_ARG_VAR; also declare with AC_SUBST, to ensure it is initialised.

	* Makefile.in (DEBUGLEVEL): Let AC_SUBST assign it.

2011-05-29  Keith Marshall  <keithmarshall@users.sourceforge.net>

	Work around bugs in MinGW and GNU getopt_long_only() implementations.

	* src/getopt.c: New file; this is a free-standing replacement for any
	implementation provided by system libraries.  We will always use this
	to ensure correct operation irrespective of system bugs; (different
	bug manifestations have been identified in the stock MinGW and GNU
	implementations).

	* Makefile.in (mingw-get.EXEEXT): Use it.

	* src/clistub.c (options): Remove redundant declaration of `-v' as a
	long form option.

2011-05-29  Keith Marshall  <keithmarshall@users.sourceforge.net>
